src/styles/components/pages/landingPages/steps.scss
.steps {
  height: 100vh;
  width: 100vw;

  .circles {
    width: 100%;
    grid-row: 1;
    grid-column: 2;
    align-self: flex-end;
    display: flex;
    justify-content: center;
    opacity: 0.7;

    @media (min-width: $tablet) {
      bottom: 6rem;
    }

    svg {
      color: $white;
      width: 1.2rem;
      height: 1.2rem;

      @media (min-width: $tablet) {
        width: 1.6rem;
        height: 1.6rem;
      }

      &:not(:last-of-type) {
        margin-right: 0.5rem;
      }
    }
  }

  .grid-wrapper {
    display: grid;
    // up arrow | header image | main image container | dragon/circle container | down arrow
    grid-template-rows: 5% 25% auto 25% 5%;
    padding: 1rem;
    // Mobile fix, fill available height
    height: -webkit-fill-available;

    img {
      max-width: 100%;
      max-height: 100%;
    }

    .dragon {
      align-self: flex-end;
    }

    .container {
      width: 100%;
      height: 100%;

      &:first-of-type {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        padding: 1rem 0;
      }

      // Middle content
      &:nth-of-type(2) {
        display: grid;
        // left arrow | main image | right arrow
        grid-template-columns: 8% auto 8%;

        .left {
          justify-self: start;
        }

        .right {
          justify-self: end;
        }

        img {
          max-height: 38vh;
          grid-column: 2;
          justify-self: center;
          align-self: center;
        }
      }

      &:nth-of-type(3) {
        display: grid;
        // left dragon | circles | right dragon
        grid-template-columns: 30% auto 30%;
      }
    }
  }

  [class^="step-"] {
    // this applies to all 'step-#' classes
    height: 100vh;
  }

  .step-1 {
    background: $jade;
  }

  .step-3 {
    background: $seafoam;
  }

  .step-2, .step-4 {
    // put dragon on the right side
    .dragon {
      grid-column: 3;
      justify-self: end;
    }
  }
}

